@@ -997,9 +997,8 @@
                          :source-name source-name
                          :debug-name debug-name))
     ((named-lambda)
-     (let* ((name (cadr thing))
-            (lambda-expression `(lambda ,@(cddr thing)))
-            (*inline-expansions* (list name 1 *inline-expansions*)))
+     (let ((name (cadr thing))
+           (lambda-expression `(lambda ,@(cddr thing))))
        (if (and name (legal-fun-name-p name))
            (let ((simple-lexenv-p (simple-lexical-environment-p *lexenv*)))
              ;; If not in a simple environment, then discard any
