@@ -2475,33 +2475,25 @@ is :ANY, the function name is not checked."
   (aver (eq (basic-combination-kind call) :local))
   (ref-leaf (lvar-uses (basic-combination-fun call))))
 
-(defun register-inline-expansion (leaf call)
-  (let* ((name (leaf-%source-name leaf))
-         (calls (basic-combination-inline-expansions call))
-         (recursive (memq name calls)))
-    (cond (recursive
-           (incf (cadr recursive))
-           calls)
-          (t
-           (list* name 1 calls)))))
+(defvar *inline-expansion-limit* 500
+  "An upper limit on the number of inline function calls that will be expanded
+   in any given code object (single function or block compilation.)")
 
 ;;; Check whether NODE's component has exceeded its inline expansion
 ;;; limit, and warn if so, returning NIL.
-(defun inline-expansion-ok (combination leaf)
-  (let* ((name (leaf-%source-name leaf))
-         (expansions (memq name
-                           (basic-combination-inline-expansions combination)))
-         (expanded (cadr expansions)))
-    (cond ((not expanded))
-          ((> expanded *inline-expansion-limit*) nil)
+(defun inline-expansion-ok (node)
+  (let ((expanded (incf (component-inline-expansions
+                          (block-component
+                           (node-block node))))))
+    (cond ((> expanded *inline-expansion-limit*) nil)
           ((= expanded *inline-expansion-limit*)
-           (let ((*compiler-error-context* combination))
-             (compiler-notify "*INLINE-EXPANSION-LIMIT* (~W) was exceeded ~
-                               while inlining ~s"
-                              *inline-expansion-limit* name))
-           (incf (cadr expansions))
+           (let ((*compiler-error-context* node))
+             (compiler-notify "*INLINE-EXPANSION-LIMIT* (~W) was exceeded, ~
+                               probably trying to  ~
+                               inline a recursive function."
+                              *inline-expansion-limit*))
            nil)
-          (t))))
+          (t t))))
 
 ;;; Make sure that FUNCTIONAL is not let-converted or deleted.
 (defun assure-functional-live-p (functional)
